data/manifests/the_stack_sample/sample_2448.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gardener-extensions-validator-vsphere
webhooks:
- name: validation.vsphere.provider.extensions.gardener.cloud
  rules:
  - apiGroups:
    - core.gardener.cloud
    apiVersions:
    - v1alpha1
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - shoots
  failurePolicy: Fail
  objectSelector:
    matchLabels:
      provider.extensions.gardener.cloud/vsphere: 'true'
  namespaceSelector: {}
  sideEffects: None
  admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    url: https://localhost:9443/webhooks/validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrekNDQWVPZ0F3SUJBZ0lSQU1nK1Z0cG5EVm55TEpuNjZFNjFXekF3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTVoyRnlaR1Z1WlhJdFpHVjJNQjRYRFRJeE1ERXlNVEV3TXpNeE5Wb1hEVE14TURFeQpNVEV3TXpNeE5Wb3dGekVWTUJNR0ExVUVBeE1NWjJGeVpHVnVaWEl0WkdWMk1JSUJJakFOQmdrcWhraUc5dzBCCkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXREV2R2MEhqRmt5b2xvenlYbXYzSUltQ1h0d3FpaVpEYVJ6M0ZGLzEKdTNQdENvaXJSMGYyejNmdWcwenpPMFovbERyT21jcS9Lc3kzM1JSR3hWK2p0MFQzaEo4Nk91bUN3U0JOZ0ZCYworWWJZMXkrZXIvWW [...]
- name: secrets.validation.vsphere.provider.extensions.gardener.cloud
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - v1
    operations:
    - UPDATE
    resources:
    - secrets
  failurePolicy: Fail
  objectSelector: {}
  namespaceSelector: {}
  sideEffects: None
  admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      namespace: garden
      name: gardener-extension-admission-vsphere
      path: /webhooks/validate/secrets
      port: 9443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrekNDQWVPZ0F3SUJBZ0lSQU1nK1Z0cG5EVm55TEpuNjZFNjFXekF3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTVoyRnlaR1Z1WlhJdFpHVjJNQjRYRFRJeE1ERXlNVEV3TXpNeE5Wb1hEVE14TURFeQpNVEV3TXpNeE5Wb3dGekVWTUJNR0ExVUVBeE1NWjJGeVpHVnVaWEl0WkdWMk1JSUJJakFOQmdrcWhraUc5dzBCCkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXREV2R2MEhqRmt5b2xvenlYbXYzSUltQ1h0d3FpaVpEYVJ6M0ZGLzEKdTNQdENvaXJSMGYyejNmdWcwenpPMFovbERyT21jcS9Lc3kzM1JSR3hWK2p0MFQzaEo4Nk91bUN3U0JOZ0ZCYworWWJZMXkrZXIvWW [...]
